--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,7 @@
   <script src="https://api-maps.yandex.ru/2.1/?apikey=6cc309b2-1f63-4d59-9212-7c3740651774&lang=ru_RU"
     type="text/javascript">
     </script>
+  <script src="https://yastatic.net/s3/mapsapi-jslibs/heatmap/0.0.1/heatmap.min.js" type="text/javascript"></script>
   <title>Test</title>
 </head>
 
