--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
     type="text/javascript">
     </script>
   <script src="https://yastatic.net/s3/mapsapi-jslibs/heatmap/0.0.1/heatmap.min.js" type="text/javascript"></script>
-  <title>Test</title>
+  <title>SREDA.market</title>
 </head>
 
 <body>
